force-app/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <description>For CREW case</description>
    <label>Incident</label>
    <nameField>
        <displayFormat>IN-{00000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>