force-app/main/default/objects/Incident__c/fields/Case_Sub_type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_type__c</fullName>
    <label>Case Sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complaints</fullName>
            </value>
            <value>
                <fullName>Compliments</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>