force-app/main/default/objects/Incident__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aircraft Issue</fullName>
            </value>
            <value>
                <fullName>Cabin Cleanliness</fullName>
            </value>
            <value>
                <fullName>Cabin Crew Members</fullName>
            </value>
            <value>
                <fullName>Cabin Interior Comfort Amenities</fullName>
            </value>
            <value>
                <fullName>Cabin Safety Procedures</fullName>
            </value>
            <value>
                <fullName>Flight Delayed or Cancelled</fullName>
            </value>
            <value>
                <fullName>Ground Service</fullName>
            </value>
            <value>
                <fullName>Inflight Product</fullName>
            </value>
            <value>
                <fullName>Onboard Public Announcement</fullName>
            </value>
            <value>
                <fullName>Operated Flight Crew</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Sales Marketing</fullName>
            </value>
            <value>
                <fullName>Service Preference</fullName>
            </value>
            <value>
                <fullName>Staff Travel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>