force-app/main/default/objects/Incident__c/fields/ELB_NO__c.field-meta.xml
<CustomField>
    <fullName>ELB_NO__c</fullName>
    <label>ELB NO.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>