force-app/main/default/objects/Incident__c/fields/iQSMS_NO__c.field-meta.xml
<CustomField>
    <fullName>iQSMS_NO__c</fullName>
    <label>iQSMS NO.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>