force-app/main/default/objects/Incident__c/fields/Phase_of_Flight__c.field-meta.xml
<CustomField>
    <fullName>Phase_of_Flight__c</fullName>
    <label>Phase of Flight</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before Boarding</fullName>
            </value>
            <value>
                <fullName>During Boarding</fullName>
            </value>
            <value>
                <fullName>During Taxing</fullName>
            </value>
            <value>
                <fullName>During Take-Off</fullName>
            </value>
            <value>
                <fullName>Before Service</fullName>
            </value>
            <value>
                <fullName>During Service</fullName>
            </value>
            <value>
                <fullName>After Service</fullName>
            </value>
            <value>
                <fullName>Descending</fullName>
            </value>
            <value>
                <fullName>After Landing</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>