force-app/main/default/objects/Incident__c/fields/Relevant_References__c.field-meta.xml
<CustomField>
    <fullName>Relevant_References__c</fullName>
    <label>Relevant References</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ELB Logged</fullName>
            </value>
            <value>
                <fullName>iQSMS Logged</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>