force-app/main/default/objects/Incident__c/fields/Relevant_References_Others__c.field-meta.xml
<CustomField>
    <fullName>Relevant_References_Others__c</fullName>
    <label>Relevant References(Others)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>