force-app/main/default/objects/Incident__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership Issue</fullName>
            </value>
            <value>
                <fullName>Website/Mobile App</fullName>
            </value>
            <value>
                <fullName>Reservation and Ticketing</fullName>
            </value>
            <value>
                <fullName>Check-in Counter</fullName>
            </value>
            <value>
                <fullName>Border Control(CIQ) Area</fullName>
            </value>
            <value>
                <fullName>Shopping/Relaxing/Resting Area</fullName>
            </value>
            <value>
                <fullName>Lounge</fullName>
            </value>
            <value>
                <fullName>Boarding Gate</fullName>
            </value>
            <value>
                <fullName>Baggage Claim Area</fullName>
            </value>
            <value>
                <fullName>Ramp</fullName>
            </value>
            <value>
                <fullName>Office Area</fullName>
            </value>
            <value>
                <fullName>Amenity Kits</fullName>
            </value>
            <value>
                <fullName>Onboard Catering &amp; Serving</fullName>
            </value>
            <value>
                <fullName>Duty Free Sales Service</fullName>
            </value>
            <value>
                <fullName>Newspaper &amp; Magazines</fullName>
            </value>
            <value>
                <fullName>PAX Seating</fullName>
            </value>
            <value>
                <fullName>Compartment</fullName>
            </value>
            <value>
                <fullName>Door</fullName>
            </value>
            <value>
                <fullName>Lavatory</fullName>
            </value>
            <value>
                <fullName>Monitor/IFE</fullName>
            </value>
            <value>
                <fullName>Inoperative Communication System</fullName>
            </value>
            <value>
                <fullName>Attendant Seat</fullName>
            </value>
            <value>
                <fullName>Windows</fullName>
            </value>
            <value>
                <fullName>Galley</fullName>
            </value>
            <value>
                <fullName>Spillage</fullName>
            </value>
            <value>
                <fullName>Cart Collision</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>En-route to Airport</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>