force-app/main/default/objects/Incident__c/fields/Time_of_Occurrence_Destination_Time__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Occurrence_Destination_Time__c</fullName>
    <label>Time of Occurrence(Destination Time)</label>
    <type>Time</type>
</CustomField>